grammars/ocaml/grammar.js
    compilation_unit: $ => seq(
      optional($.shebang),
      optional($._structure),
    ),

    _structure: $ => choice(
      repeat1(';;'),
      seq(
        repeat(';;'),
        choice($._structure_item, $.toplevel_directive, $.expression_item),
        repeat(choice(
          seq(repeat(';;'), choice($._structure_item, $.toplevel_directive)),
          seq(repeat1(';;'), $.expression_item),
        )),
        repeat(';;'),
      ),
    ),

    type_definition: $ => seq(
      'type',
      optional($._attribute),
      optional('nonrec'),
      sep1('and', $.type_binding),
    ),

    type_binding: $ => seq(
      optional($._type_params),
      choice(
        seq(
          field('name', $.type_constructor),
          optional(seq(
            choice('=', ':='),
            choice(
              seq(optional('private'), field('body', $._type)),
              seq(
                optional(seq(field('synonym', $._type), '=')),
                optional('private'),
                field(
                  'body',
                  choice($.variant_declaration, $.record_declaration, '..'),
                ),
              ),
            ),
          )),
          repeat($.type_constraint),
        ),
        seq(
          field('name', $.type_constructor),
          '=',
          field('body', $.external_declaration),
          repeat($.type_constraint),
        ),
        seq(
          field('name', $.type_constructor_path),
          seq(
            '+=',
            optional('private'),
            field('body', $.variant_declaration),
          ),
        ),
      ),
      repeat($.item_attribute),
    ),

    _type_params: $ => choice(
      $._type_param,
      parenthesize(sep1(',', $._type_param)),
    ),

    _module_type: $ => choice(
      $.module_type_path,
      $.signature,
      $.module_type_constraint,
      $.module_type_of,
      $.functor_type,
      $.parenthesized_module_type,
      $._extension,
    ),

    _polymorphic_type: $ => seq(
      $.polymorphic_variables,
      '.',
      field('type', $._type),
    ),

    polymorphic_variables: $ => choice(
      repeat1($.type_variable),
      alias($._abstract_type, $.abstract_type),
    ),

    _abstract_type: $ => seq(
      'type',
      repeat1($.type_constructor),
    ),

    _delimited_type: $ => choice(
      alias($._unboxed_tuple_type, $.tuple_type),
      $.polymorphic_variant_type,
      $.package_type,
      $.parenthesized_type,
    ),

    _simple_type: $ => choice(
      $._delimited_type,
      $.type_variable,
      $.type_constructor_path,
      $.constructed_type,
      $.local_open_type,
      $.hash_type,
      $.object_type,
      $._extension,
    ),

    _type: $ => choice(
      $._simple_type,
      alias($._proper_tuple_type, $.tuple_type),
      alias($._labeled_tuple_type, $.tuple_type),
      $.function_type,
      $.aliased_type,
    ),

    function_type: $ => prec.dynamic(1, prec.right(seq(
      field('domain', $._argument_type),
      optional($._at_mode),
      '->',
      field('codomain', $._type),
      optional($._at_mode),
    ))),

    _argument_type: $ => choice(
      $._simple_type,
      alias($._proper_tuple_type, $.tuple_type),
      $.labeled_argument_type,
      $.polymorphic_argument_type,
    ),

    labeled_argument_type: $ => seq(
      optional('?'),
      $._label_name,
      ':',
      field('type', $._argument_type),
    ),

    polymorphic_argument_type: $ => parenthesize($._polymorphic_type),

    labeled_tuple_element_type: $ => seq(
      $._label_name,
      ':',
      field('type', $._simple_type),
    ),

    constructed_type: $ => seq(
      choice(
        $._simple_type,
        parenthesize(sep1(',', $._type)),
      ),
      $.type_constructor_path,
    ),

    aliased_type: $ => seq(
      field('type', $._type),
      'as',
      field('alias', $.type_variable),
    ),

    local_open_type: $ => seq(
      $.extended_module_path,
      '.',
      field('type', $._delimited_type),
    ),

    polymorphic_variant_type: $ => choice(
      seq('[', $.tag_specification, ']'),
      seq('[', optional($._tag_spec), '|', sep1('|', $._tag_spec), ']'),
      seq('[>', optional('|'), sep('|', $._tag_spec), ']'),
      seq('[<', optional('|'), sep1('|', $._tag_spec), optional(seq('>', repeat1($.tag))), ']'),
    ),

    _tag_spec: $ => choice(
      $._type,
      $.tag_specification,
    ),

    tag_specification: $ => seq(
      $.tag,
      optional(seq(
        'of',
        optional('&'),
        sep1('&', $._type),
      )),
    ),

    package_type: $ => parenthesize(seq(
      'module',
      optional($._attribute),
      optional(seq(field('module', $._simple_module_name), ':')),
      field('module_type', $._module_type),
    )),

    parenthesized_type: $ => parenthesize($._type),

    // Expressions

    _attribute: $ => seq('%', $.attribute_id),

    // Constants

    _at_mode: $ => seq('@', field('mode', repeat1($._mode))),

    extended_module_path: $ => choice(
      path($.extended_module_path, $._simple_module_name),
      seq(
        $.extended_module_path,
        parenthesize($.extended_module_path),
      ),
    ),

    module_type_path: $ => path($.extended_module_path, $._module_type_name),

    type_constructor_path: $ => path($.extended_module_path, $.type_constructor),

    _label_name: $ => alias($._lowercase_identifier, $.label_name),
    type_constructor: $ => seq(
      $._lowercase_identifier,
      optional(token.immediate('#')),
    ),
    _simple_module_name: $ => alias($._uppercase_identifier, $.module_name),
    _module_type_name: $ => alias(choice($._uppercase_identifier, $._lowercase_identifier), $.module_type_name),

    _lowercase_identifier: $ => /(\\#)?[\p{Ll}_][\p{XID_Continue}']*/,
    _uppercase_identifier: $ => /[\p{Lu}][\p{XID_Continue}']*/,

    type_variable: $ => seq(/'/, choice($._lowercase_identifier, $._uppercase_identifier)),
    tag: $ => seq(/`/, choice($._lowercase_identifier, $._uppercase_identifier)),
